# simplification

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  environment.yml  full-env.yml  messed-coins.ipynb  messed_coins.parquet  pyproject.toml  ruff.toml  simp-env.yml
.github/workflows/: testing.yml
ci/: py311_simplification-dev.yaml  py311_simplification-latest.yaml  py311_simplification-oldest.yaml
code/: _addartifacts_8989.ipynb  _clip_networks.ipynb  _convert.ipynb  cityseer.ipynb  cityseer_overview_gaboardi.ipynb  cityseer_parallel_gaboardi.ipynb  cityseer_simplification.ipynb  clustering.ipynb  evaluate_h3cells.ipynb  evaluate_h3cells_featurematching.ipynb  featurematching_compute.ipynb  matching_functions.py  momepy.ipynb  osmnx.ipynb  parenx-run.sh  parenx.ipynb  simplification_protocol.ipynb  triangles.ipynb  usecases.ipynb  utils.py
core/: __init__.py  eval.py  geometry.py  protocol.py  stats.py  utils.py  viz.py
core/algorithms/: __init__.py  artifacts.py  common.py  nodes.py  simplify.py  triangles.py
core/tests/: conftest.py  test_common.py  test_geometry.py  test_protocol.py  test_stats.py  test_utils.py  test_viz.py  test_viz_context.py  test_viz_h3_hex.py  test_viz_protocol.py
core/viz/: __init__.py  ces.py  context.py  h3_hex.py  protocol.py
data/8989/: roads_osm.parquet
envs/: py311_uscuni_simplification.yml  py312_uscuni_simplification.yml
evaluation/: 1133.gpkg  1656.gpkg  4617.gpkg  4881.gpkg  809.gpkg  869.gpkg  8989.gpkg
evaluation-buildings/: 4617.gpkg  4881.gpkg  809.gpkg  869.gpkg
illustrations/: ces_liege_post.afdesign  ces_liege_subset.afdesign  neatnet.drawio
notebooks/: _addartifacts_8989.ipynb  _clip_networks.ipynb  _convert.ipynb  check_corrected_input_data.ipynb  cityseer_overview_gaboardi.ipynb  cityseer_parallel_gaboardi.ipynb  clustering.ipynb  evaluate_h3cells.ipynb  momepy.ipynb  osmnx.ipynb  parenx-run.sh  parenx.ipynb  remove_degree_2_nodes.ipynb  simplification_api.ipynb  simplification_api_bug.ipynb  simplification_pipeline.ipynb  simplification_prg.ipynb  simplification_protocol.ipynb  splitlines.ipynb  triangles.ipynb  typology-doubles.ipynb  typology-multiples.ipynb  typology-singles.ipynb  typology-triangles.ipynb  typology.ipynb  usecases.ipynb  utils.py
notebooks/archive/: 00_evaluate.ipynb  _addartifacts_8989.ipynb  _convert.ipynb  check_corrected_input_data.ipynb  clustering.ipynb  evaluate-dec.ipynb  momepy.ipynb  simplification_api.ipynb  simplification_api_bug.ipynb  simplification_pipeline.ipynb  simplification_prg.ipynb  simplification_protocol.ipynb
notebooks/evaluation/: 00_evaluate.ipynb  01a_statistical_comparison.ipynb  01b_statistical_comparison_viz.ipynb  02b_statistical_comparison_buildings.ipynb  buildings.ipynb  combined-buildings.csv  combined.csv  combined_deltas-buildings.csv  combined_deltas.csv  combined_pearson.csv  combined_spearman.csv  evaluate.ipynb  evaluate_h3cells.ipynb  statistical_comparison.ipynb  statistical_comparison_buildings.ipynb  statistical_comparison_viz.ipynb  statistical_comparison_viz_buildings.ipynb
notebooks/figures/: ces_illustration.ipynb  gisruk_2025_figure.ipynb  simplification_protocol.ipynb  skeletonize_clusters.ipynb  usecases_paper.ipynb
notebooks/manual-revision/: manual-revision.ipynb
notebooks/methods/: cityseer.ipynb  cityseer_overview_gaboardi.ipynb  neatnet-buildings.ipynb  neatnet.ipynb  osmnx.ipynb  parenx-run.sh  parenx.ipynb  sgeop.ipynb
notebooks/preprocessing/: clip_networks.ipynb  remove_degree_2_nodes.ipynb
notebooks/typology/: typology-singles.ipynb  typology-triangles.ipynb
notebooks/usecases/: usecases.ipynb
notes/: cityseer.md  osmnx.md
revision/1133/: deltas.gpkg  deltas_revised.gpkg  deltas_revised.parquet  deltas_updated.gpkg
revision/1656/: deltas.gpkg  deltas_revised.gpkg  deltas_revised.parquet  deltas_updated.gpkg
revision/4617/: deltas.gpkg  deltas_revised.gpkg  deltas_updated.gpkg
revision/4881/: deltas.gpkg  deltas_revised.gpkg  deltas_revised.parquet  deltas_updated.gpkg
revision/809/: deltas.gpkg  deltas_revised.gpkg  deltas_revised.parquet  deltas_updated.gpkg
revision/869/: deltas.gpkg  deltas_revised.gpkg  (+2 more)
typology/: typology-draft.key  typology-draft01.key
(+107 files in other folders)
